# minidns

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/server/: database.hpp  dns_resolver.hpp  log.hpp  parse_error.hpp  primary_server.hpp  raii_socket.hpp  root_servers_database.hpp  secondary_server.hpp  server_config.hpp
include/shared/: config.hpp  dns_record.hpp  query.hpp  sock_addr.hpp
include/shared/util/: scope_guard.hpp  split_n.hpp  term_color.hpp  to_underlying.hpp
input/: config.cfg  example.com.db
src/client/: main.cpp
src/server/: database.cpp  dns_resolver.cpp  log.cpp  main.cpp  parse_error.cpp  primary_server.cpp  raii_socket.cpp  root_servers_database.cpp  secondary_server.cpp  server_config.cpp
src/shared/: query.cpp  sock_addr.cpp
src/shared/util/: strerror_mt.cpp
